# bing-webserver

./: .dockerignore  Cargo.toml  Dockerfile  README.md  index.html
.github/workflows/: release.yml
examples/: config.env  docker-compose.yml  start.sh
src/: main.rs
