[package]
name = "bing-webserver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true

[dependencies]
futures = "0.3"
markdown = "0.3.0"
mime_guess = "2.0.4"
once_cell = "1.12.0"

[dependencies.async-std]
version = "1.6"
features = ["attributes"]